# examen-dvc

./: .gitignore  dvc.yaml  pyproject.toml
.dvc/: config
data/processed_data/: .gitignore
data/raw_data/: .gitignore
models/: .gitignore
scripts/: clean.sh  evaluate.sh  grid_search.sh  normalize.sh  pull_data.sh  train.sh  train_test_split.sh
src/data/: create_train_test_sets.py  normalize.py  pull_data.py
src/models/: evaluate.py  grid_search.py  train.py
src/utils/: __init__.py  logs.py
