[project]
name = "examen-dvc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "requests>=2.32.4",
    "scikit-learn>=1.3.2",
    "xgboost>=2.1.4",
]

[tool.uv.workspace]
members = [
    "env",
]

[dependency-groups]
dev = [
    "ipython>=8.12.3",
]
